# VM-Load-Testing

./: .gitignore  Cargo.toml  README.md
deployment/: loader.local.dev.env.example  local.dev.env.example
diagrams/: load_schema.puml  manage_schema.puml
diagrams/pis/: kmbd_en.puml  kmbd_ru.puml  kmpo.puml
loader/: Cargo.toml  sqlx-data.json
loader/ansible/: inventory.yaml  loader-0.1.0-1.el7.x86_64.rpm  playbook.yaml  vars.yaml
loader/migrations/: 20221104143127_init.sql  20221108224311_data.sql  20221109165427_test_users.sql
loader/src/: config.rs  main.rs
loader/src/api/: mod.rs  models.rs
loader/src/cmd/: mod.rs
loader/src/repository/: mod.rs  models.rs
manager/: Cargo.toml  sqlx-data.json
manager/migrations/: 20221110192352_init.sql  20221116183509_statistics.sql
manager/src/: config.rs  main.rs
manager/src/api/: mod.rs  models.rs
manager/src/cmd/: mod.rs
manager/src/processor/: mod.rs
manager/src/repository/: mod.rs  models.rs
src/cmd/: mod.rs
src/executor/: dummy.rs  mod.rs
util/: Cargo.toml
util/src/: lib.rs
util/src/clients/: mod.rs
util/src/models/: loader.rs  manager.rs  mod.rs
worker/: Cargo.toml
worker/src/: config.rs  main.rs
worker/src/cmd/: mod.rs
