[package]
name = "vps-load-testing-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
envconfig = "0.10.0"
clap = { version = "3.2.22", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
anyhow = "1.0.65"
tokio = { version = "1.21.1", features = ["full"] }
rdkafka = { version = "0.28.0", features = ["dynamic-linking"] }
async-trait = "0.1.57"
futures = "0.3.24"