[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { version = "0.1.0", path = "../util" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
regex = "1.6.0"
rocket-validation = "0.1.3"
serde = { version = "1.0.140", features = ["derive"] }
validator = "0.16.0"
rocket_contrib = { version = "0.4.11", default_features = false, features = ["json"] }
envconfig = "0.10.0"
clap = { version = "4.0.17", features = ["derive"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
tokio = "1.20.1"
anyhow = "1.0.59"
async-trait = "0.1.57"
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
chrono = { version = "0.4.20", features = ["serde"] }
schemars = { version = "0.8.10", features = ["chrono"] }
rand = "0.8.5"