[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.59"
serde = { version = "1.0.140", features = ["derive"] }
schemars = { version = "0.8.10", features = ["chrono"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
validator = "0.16.0"
rocket-validation = "0.1.3"
chrono = { version = "0.4.20", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }